@@ -1,4 +1,6 @@
 ver 0.20.2 (not yet released)
+* input
+  - alsa: fix crash bug
 * decoder
   - flac: add options "probesize" and "analyzeduration"
 * resampler
